localhost working properly
